[FIX] planning: prevent created shift after saving as template
Before this commit:
In planning module, when user save employee's shift as template by clicking
'Save as template' button at that time the shift is created. Then click on
discard didn't prevent that shift and display it on gantt view.

After this commit:
Shift will not be displayed after clicking on 'discard'. Instead of using button
(Save as template) adding Boolean field 'template_creation' below 'repeat' field
for saving shift as template.

PR https://github.com/odoo/enterprise/pull/15830
Task-2322036

closes odoo/enterprise#15830

--- a/planning/static/src/scss/planning_gantt.scss
+++ b/planning/static/src/scss/planning_gantt.scss
@@ -15,7 +15,3 @@
         }
     }
 }
-
-.o_planning_save_template {
-    text-transform: none;
-}
